--- a/__redirect.html
+++ b/__redirect.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Minhwa Lee | Home</title> 
-    <!-- <meta http-equiv="refresh" content="0; URL=https://web.stanford.edu/~msaveski/" /> --> 
+    <meta http-equiv="refresh" content="0; URL=https://mimn97.github.io/" />
 </head>
 
 <body>
