--- a/index.html
+++ b/index.html
@@ -3,35 +3,37 @@ layout: default
 title: Home
 ---
 <!-- ========== BIO ========== -->
-<div class="docs-section" id="bio">
-  <h4>Bio</h4>
+<div class="docs-section" id="about">
+  <h4>About</h4>
   <p>
-  (Minhwa Lee) My research develops tools for analyzing <b>large-scale social data</b>, aiming to provide a better understanding of <b>social structure and behaviors</b> online while also impacting the <b>design of digital social systems</b>. 
-  My recent work has focused on reducing political polarization online 
-  [<a href="assets/publications/2022_newsbridge/paper.pdf" target="_blank">ICWSM'22a</a>,
-  <a href="assets/publications/2022_flipfeed/paper.pdf" target="_blank">ICWSM'22b</a>,
-  <a href="assets/publications/2021_balanced_inf_max/paper.pdf" target="_blank">WSDM'21</a>,
-  <a href="assets/publications/2018_social_mirror/paper.pdf" target="_blank">WWW'18</a>],
-  improving the health of online conversations 
-  [<a href="assets/publications/2021_dtox/paper.pdf" target="_blank">WWW'21</a>, 
-  <a href="assets/publications/2021_social_catalysts/paper.pdf" target="_blank">CSCW'21</a>], 
-  and causal inference in social systems 
-  [<a href="assets/publications/2017_detecting_network_effects/paper.pdf" target="_blank">KDD'17</a>
-  <a href="assets/publications/2019_biometrika/paper.pdf" target="_blank">Biometrika'19</a>]. 
-  My research often falls at the intersections of Social Networks, Machine Learning, and Causal Inference.
+  I am a second-year M.S. student in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, where I worked with Prof. Sofia Visa and Prof. Marian Frazier. 
+
+  <b>I'm applying for several PhD programs in Computer Science for Fall 2023! </b>
   </p>
 
   <p>
-  <b>I'm joining the University of Washington Information School as an Assistant Professor, starting September 2023.</b>
-  I am currently a Postdoc at Stanford University, mentored by <a href="https://web.stanford.edu/~jugander/" target="_blank">Johan Ugander</a>.
-  I received my Ph.D. from MIT in 2020 under the supervision of Deb Roy. 
-  Before coming to MIT, I spent one year in Paris and one year in Barcelona doing a M.Sc. in Data mining and Knowledge Management. 
-  I got my B.Sc. from Staffordshire University with First Class honors in Computer Science. 
-  Throughout my graduate studies, I spent several summers doing internships in industry, including Yahoo! Labs, Amazon, LinkedIn, and Facebook.
+  My primary research interests lie in the intersection of <b>data science</b> and <b>natural language processing (NLP)</b>. The long-term goal of my research is to develop statistical and AI tools for increasing public and population health and thus promote health equity. 
+  In particular, my research focuses on how to extract meaningful insights from different sources of unstructured data (e.g., clinical texts, social media posts, GPS information) using data science and NLP approaches. 
+  Here are some keywords of my research interests, including but not limited to: 
+  <ul>
+    <li>
+      Data Science for Public Health (e.g., computational social science, data-driven approaches to social issues and policymaking)
+    </li>
+    <li>
+      NLP for Public Health (e.g., developing large language models (LLMs) for pubilc health surveillance)
+    </li>
+    <li>
+      NLP for Social Media Analysis (e.g., processing noisy texts on social media platforms)
+    </li>
+    <li>
+      Equitable AI for Health (e.g., debiasing NLP models, clinical notes, or social media)
+    </li>
+  </ul>
   </p> 
 </div>
 
-<div class="docs-section" id="prospective-students">  
+<!-- <div class="docs-section" id="prospective-students">  
   <h4>Prospective Students</h4>
   <p>
   <b>I'm recruiting PhD students to start Fall 2023 at the University of Washington! </b>
@@ -39,11 +41,29 @@ title: Home
   If you are interested, please apply to the UW iSchool <a href="https://ischool.uw.edu/programs/phd/admissions" target="_blank">PhD program</a> and mention me in your application.
   If you have any questions, feel free to reach out by email!
   </p> 
+</div> -->
+
+<!-- ========== News ========== -->
+<div class="docs-section" id="news">
+  <h4>Updates</h4>
+    <ul>
+      <li>
+        <b style="color:cadetblue">[Jan. 2023]</b> &nbsp&nbsp
+         Started my data science internship at Microsoft New England!
+      </li>
+      <li>
+        <b style="color:cadetblue">[Jan. 2023]</b>&nbsp&nbsp
+        Submitted our work to ACL 2023! Wish me good luck!
+      </li>
+      <li>
+        <b style="color:cadetblue">[Jun. 2022]</b>&nbsp&nbsp
+        Started a summer research internship at UMass BioNLP Lab!
+      </li>     
+    </ul>
 </div>
 
-
 <!-- ========== PUBLICATIONS ========== -->
-<div class="docs-section" id="publications">
+<!-- <div class="docs-section" id="publications">
   <h4>Publications</h4>
 
   <p>Most recent publications on <a href="{{ site.data.main_info.google_scholar }}" target="_blank">Google Scholar</a>.<br/>
@@ -129,7 +149,7 @@ title: Home
       {% endfor %}
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- ========== PROJECTS ========== 
 <div class="docs-section" id="projects">
@@ -210,7 +230,7 @@ title: Home
 <div class="docs-section" id="resume">
   <h4>Vitæ</h4>
 
-  <p>Full Resume in <a href={{ "/assets/cv/cv_web.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+  <p>Full Resume in <a href={{ "/assets/cv/MinhwaLee_Jan2023.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
 
   <!-- The Timeline -->
   <ul class="timeline">
@@ -232,40 +252,4 @@ title: Home
   </ul>
 </div>
 
-
-<div class="docs-section" id="template">
-    <h4>Website Design</h4>
-    Since I made this website, many people have found this Jekyll template useful
-    <a href="https://people.csail.mit.edu/davidam/" target="_blank">[1</a>,
-    <a href="https://thashim.github.io/" target="_blank">2</a>,
-    <a href="https://pauljwright.github.io/" target="_blank">3</a>,
-    <a href="https://bayesianbrad.github.io/" target="_blank">4</a>,
-    <a href="https://ahxt.github.io/" target="_blank">5</a>,
-    <a href="https://code-terminator.github.io/" target="_blank">6</a>,
-    <a href="https://dinacmistry.github.io/" target="_blank">7</a>,
-    <a href="https://stanniszhou.github.io/" target="_blank">8</a>,
-    <a href="http://binghongchen.net/" target="_blank">9</a>,
-    <a href="https://jirvin16.github.io/" target="_blank">10</a>,
-    <a href="https://mengliu1998.github.io/" target="_blank">11</a>,
-    <a href="https://amir-rahimi.github.io/" target="_blank">12</a>,
-    <a href="https://taoyds.github.io/" target="_blank">13</a>,
-    <a href="https://zhangjingtun.com/" target="_blank">14</a>,
-    <a href="https://www.saraiht.com/" target="_blank">15</a>,
-    <a href="https://tomyan555.github.io/" target="_blank">16</a>,
-    <a href="https://abhishekgrewal.github.io/" target="_blank">17</a>,
-    <a href="https://xuezhemax.github.io/" target="_blank">18</a>,
-    <a href="https://mmeendez8.github.io/" target="_blank">19</a>,
-    <a href="https://pkassraie.github.io/" target="_blank">20</a>,
-    <a href="https://ninasakhnini.dev/" target="_blank">21</a>,
-    <a href="http://www.yapengtian.com/" target="_blank">22</a>,
-    <a href="https://weijian-li.github.io/" target="_blank">23</a>,
-    <a href="https://www.seas.upenn.edu/~elenter/" target="_blank">24</a>,
-    <a href="https://cm-bf.github.io/" target="_blank">25</a>,
-    <a href="https://stuartburrell.github.io/" target="_blank">26</a>].
-    <!--<br/>-->
-    You can find all the code needed to build your website in this <a href="https://github.com/msaveski/www_personal" target="_blank">GitHub repo</a>.
-    Feel free to use it. <br/>
-
-    If you end up using it, please link to here and drop me an email.
-    I'm always happy to see people using it.
 </div>
