--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@ title: Home
   I am a second-year M.S. student in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, where I worked with Prof. Sofia Visa and Prof. Marian Frazier. 
 
-  <b>I'm applying for several PhD programs in Computer Science for Fall 2023! </b>
+  <p><b>I'm applying for several PhD programs in Computer Science for Fall 2023!</b></p>
   </p>
 
   <p>
   My primary research interests lie in the intersection of <b>data science</b> and <b>natural language processing (NLP)</b>. The long-term goal of my research is to develop statistical and AI tools for increasing public and population health and thus promote health equity. 
   In particular, my research focuses on how to extract meaningful insights from different sources of unstructured data (e.g., clinical texts, social media posts, GPS information) using data science and NLP approaches. 
-  Here are some keywords of my research interests, including but not limited to: 
+
+  <p>Here are some keywords of my research interests, including but not limited to: </p>
   <ul>
     <li>
       Data Science for Public Health (e.g., computational social science, data-driven approaches to social issues and policymaking)
