--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@ title: Home
   My primary research interests lie in the intersection of <b>data science</b> and <b>natural language processing (NLP)</b>. The long-term goal of my research is to develop statistical and AI tools for increasing public and population health and thus promote health equity. 
   In particular, my research focuses on how to extract meaningful insights from different sources of unstructured data (e.g., clinical texts, social media posts, GPS information) using data science and NLP approaches. 
 
-  <p>Here are some keywords of my research interests, including but not limited to: </p>
+  <p>Here are some <b>keywords</b> of my research interests, including but not limited to: </p>
   <ul>
     <li>
-      Data Science for Public Health (e.g., computational social science, data-driven approaches to social issues and policymaking)
+      Data Science for Public Health (e.g., data-driven approaches to health disparity issues)
     </li>
     <li>
       NLP for Public Health (e.g., developing large language models (LLMs) for pubilc health surveillance)
