--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ title: Home
   I am a second-year M.S. student in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, where I worked with Prof. Sofia Visa and Prof. Marian Frazier. 
 
-  <p><b>I'm applying for several PhD programs in Computer Science for Fall 2023!</b></p>
+  <p><b>I'm applying for several PhD programs in Computer Science for Fall 2023! I am also looking for AI/ML residency programs or summer internships starting 2023! </b></p>
+  
   </p>
 
   <p>
@@ -152,7 +153,7 @@ title: Home
   </div>
 </div> -->
 
-<!-- ========== PROJECTS ========== 
+========== PROJECTS ========== 
 <div class="docs-section" id="projects">
   <h4>Projects</h4>
 
@@ -225,7 +226,7 @@ title: Home
   </div>
 
 </div>
--->
+
 
 <!-- ========== RESUME ========== -->
 <div class="docs-section" id="resume">
