correct project format

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ title: Home
   </div>
 </div> -->
 
-========== PROJECTS ========== 
+<!-- ========== PROJECTS ==========  -->
 <div class="docs-section" id="projects">
   <h4>Projects</h4>
 
