--- a/index.html
+++ b/index.html
@@ -157,6 +157,8 @@ title: Home
 <div class="docs-section" id="projects">
   <h4>Projects</h4>
 
+  <p>Research Portfolio in <a href={{ "/assets/cv/portfoilo_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+
   <ul class="tab-nav">
     <li><div class="button active" data-ref="#projects-selected">Selected</div></li>
     <li><div class="button" data-ref="#projects-all">All</div></li>
