--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
   <h4>About</h4>
   <p>
   I am a second-year M.S. student in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
-  Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, where I studied computer science and mathematics. 
+  Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
 
   <p><b>I'm applying for several PhD programs in Computer Science for Fall 2023! I am also looking for AI/ML residency programs or summer internships starting 2023! </b></p>
   
