--- a/index.html
+++ b/index.html
@@ -256,4 +256,6 @@ title: Home
   </ul>
 </div>
 
+This website was built based on a template by <a href="http://www.martinsaveski.com/"> Prof. Martin Saveski</a>. Thank you for sharing!
+
 </div>
