--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@ title: Home
   I am a second-year M.S. student in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
 
-  <p><b>I'm applying for several PhD programs in Computer Science for Fall 2023! I am also looking for AI/ML residency programs or summer internships starting 2023! </b></p>
+  <p><b> I am looking for full-time research positions in computational social science and NLP areas starting Summer 2023! </b></p>
   
   </p>
 
   <p>
-  My primary research interests lie in the intersection of <b>data science</b> and <b>natural language processing (NLP)</b>. The long-term goal of my research is to develop statistical and AI tools for increasing public and population health and thus promote health equity. 
-  In particular, my research focuses on how to extract meaningful insights from different sources of unstructured data (e.g., clinical texts, social media posts, GPS information) using data science and NLP approaches. 
-
-  <p>Here are some <b>keywords</b> of my research interests, including but not limited to: </p>
+  My research interests lie in the intersection of <b>computational social science</b> and <b>natural language processing (NLP)</b>. 
+  The long-term goal of my research is to develop AI tools for large-scale social data, aiming to provide a deeper understanding of human behaviors and social systems online. 
+  I am also interested in promoting health equity by analyzing public and population health with NLP and data mining approaches. 
+  
+  At UMass, I have researched how to extract meaningful insights from different sources of unstructured data (e.g., clinical texts, social media posts, geospatial data) using data science and NLP approaches. 
+  I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data. 
+  <!-- <p>Here are some <b>keywords</b> of my research interests, including but not limited to: </p>
   <ul>
     <li>
       Data Science for Public Health (e.g., data-driven approaches to health disparity issues)
@@ -32,7 +35,7 @@ title: Home
       Equitable AI for Health (e.g., debiasing NLP models, clinical notes, or social media)
     </li>
   </ul>
-  </p> 
+  </p>  -->
 </div>
 
 <!-- <div class="docs-section" id="prospective-students">  
