--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@ title: Home
   <h4>Updates</h4>
     <ul>
       <li>
-        <b style="color:cadetblue">[Jan. 2023]</b> &nbsp&nbsp
-        Started my data science internship at Microsoft New England!
+        <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
+        Submitted a manuscript on analyzing socio-geographic disparities in food pantry accessibility to Nature Food. Wish me good luck!  
       </li>
       <li>
-        <b style="color:cadetblue">[Jan. 2023]</b>&nbsp&nbsp
-        Submitted our work to ACL 2023! Wish me good luck!
+        <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
+        Our work on Visual Word Disambiguation Task has been accepted to ACL 2023! 
       </li>
       <li>
-        <b style="color:cadetblue">[Jun. 2022]</b>&nbsp&nbsp
-        Started a summer research internship at UMass BioNLP Lab!
-      </li>     
+        <b style="color:cadetblue">[Feb. 2023]</b>&nbsp&nbsp
+        Succesfully finished my Data Scientist Internship at Microsoft! 
+      </li>    
     </ul>
 </div>
 
