update every work

--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@ title: Home
 <div class="docs-section" id="about">
   <h4>About</h4>
   <p>
-  I am a second-year M.S. student in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
 
-  <p><b> I am looking for full-time research positions in computational social science and NLP areas starting Summer 2023! </b></p>
-  
+  <p><b>ATTENTION: I am looking for full-time research positions in biostatistics, computational social science and healthcare settings starting Summer 2023! </b></p>
+
   </p>
 
   <p>
-  My research interests lie in the intersection of <b>computational social science</b> and <b>natural language processing (NLP)</b>. 
-  The long-term goal of my research is to develop AI tools for large-scale social data, aiming to provide a deeper understanding of human behaviors and social systems online. 
-  I am also interested in promoting health equity by analyzing public and population health with NLP and data mining approaches. 
+  My research goal is to develop <b>AI-empowered</b> methods that address <b>social problems</b>  (e.g., equity, hate crime) and promote <b>public health</b> (e.g., risk factors of diseases).
+  In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing statistics, machine learning (ML) and natural language processing (NLP), which ultimately aims to provide a deeper understanding of socio-environmental impacts on human behaviors and health. 
   
-  At UMass, I have researched how to extract meaningful insights from different sources of unstructured data (e.g., clinical texts, social media posts, geospatial data) using data science and NLP approaches. 
+  Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches. 
   I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data. 
   <!-- <p>Here are some <b>keywords</b> of my research interests, including but not limited to: </p>
   <ul>
@@ -58,7 +57,7 @@ title: Home
       </li>
       <li>
         <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
-        Our work on Visual Word Disambiguation Task has been accepted to ACL 2023! 
+        Our work on Visual Word Disambiguation Task has been accepted to ACL 2023 (Main)! 
       </li>
       <li>
         <b style="color:cadetblue">[Feb. 2023]</b>&nbsp&nbsp
@@ -68,7 +67,7 @@ title: Home
 </div>
 
 <!-- ========== PUBLICATIONS ========== -->
-<!-- <div class="docs-section" id="publications">
+<div class="docs-section" id="publications">
   <h4>Publications</h4>
 
   <p>Most recent publications on <a href="{{ site.data.main_info.google_scholar }}" target="_blank">Google Scholar</a>.<br/>
@@ -154,7 +153,7 @@ title: Home
       {% endfor %}
     </div>
   </div>
-</div> -->
+</div>
 
 <!-- ========== PROJECTS ==========  -->
 <div class="docs-section" id="projects">
