--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="docs-section" id="about">
   <h4>About</h4>
   <p>
-  I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">College of Information and Computer Sciences</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
 
   <p><b>ATTENTION: I am looking for full-time research positions in biostatistics, computational social science and healthcare settings starting Summer 2023! </b></p>
@@ -15,7 +15,7 @@ title: Home
 
   <p>
   My research goal is to develop <b>AI-empowered</b> methods that address <b>social problems</b>  (e.g., equity, hate crime) and promote <b>public health</b> (e.g., risk factors of diseases).
-  In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing statistics, machine learning (ML) and natural language processing (NLP), which ultimately aims to provide a deeper understanding of socio-environmental impacts on human behaviors and health. 
+  In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>. 
   
   Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches. 
   I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data. 
