--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title: Home
     <ul>
       <li>
         <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
-        Submitted a manuscript on analyzing socio-geographic disparities in food pantry accessibility to Nature Food. Wish me good luck!  
+        Submitted a manuscript on socio-geographic disparities in social system to Nature Food. Wish me good luck!  
       </li>
       <li>
         <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
