--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@ title: Home
   I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
 
-  <p><b>ATTENTION: I am looking for full-time research positions in biostatistics, computational social science and healthcare settings starting Summer 2023! </b></p>
+  <p><b>ATTENTION: I am looking for full-time research positions in NLP, biostatistics, computational social science or healthcare settings starting Summer 2023! </b></p>
 
   </p>
 
   <p>
-  My research goal is to develop <b>AI-empowered</b> methods that address <b>social problems</b>  (e.g., equity, hate crime) and promote <b>public health</b> (e.g., risk factors of diseases).
+  My research goal is to develop <b>AI-empowered</b> methods that address <b>social problems</b>  (e.g., health, equity, hate crime) and promote <b>public health</b> (e.g., risk factors of diseases).
   In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>. 
   
   Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches. 
