--- a/__redirect.html
+++ b/__redirect.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Minhwa Lee | Home</title> 
+    <title>About Minhwa Lee</title> 
     <meta http-equiv="refresh" content="0; URL=https://mimn97.github.io/" />
 </head>
 
