--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@ title: Home
   <h4>About</h4>
   <p>
   I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
-  Previously, I received my B.A in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
+  Previously, I received my double B.As in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
 
-  <p><b>ATTENTION: I am looking for full-time research positions in NLP, biostatistics, computational social science or healthcare settings starting Summer 2023! </b></p>
-
+  <p><b>ATTENTION: I am looking for full-time research positions that covers NLP and/or computational social science, or Human-computer Interaction starting July 2023! </b>
+  </p>
   </p>
 
   <p>
-  My research goal is to develop <b>AI-empowered</b> methods that address <b>social problems</b>  (e.g., health, equity, hate crime) and promote <b>public health</b> (e.g., risk factors of diseases).
-  In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>. 
+  My research goal is to develop AI-driven systems that tackle various societal challenges, such as promoting equitable access in healthcare, education, and social welfare. 
+  In my previous work, I utilized data mining and NLP techniques to (1) extract insights on social welfare disparities and (2) predict mental health risks in US neighborhoods from Twitter.
+  I also contributed to research projects in deep learning and NLP, investigating clinical language models' performance in low-resource settings and enhancing vision-language models with GPT-3. 
+  These previous experiences not only expanded our understanding of health and society but also demonstrated my versatility in different research domains.</p>
   
-  Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches. 
-  I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data. 
-  <!-- <p>Here are some <b>keywords</b> of my research interests, including but not limited to: </p>
+  <p> I am eager to broaden my research interests to encompass fields like multimodal NLP and Human-Computer Interaction (HCI). 
+    By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p>
+  
+      <!-- In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>.  -->
+  <!-- Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches.  -->
+  <!-- I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data.  -->
+  
+  <!-- <p>Current Research interests, including but not limited to: </p>
   <ul>
     <li>
       Data Science for Public Health (e.g., data-driven approaches to health disparity issues)
@@ -159,7 +166,7 @@ title: Home
 <div class="docs-section" id="projects">
   <h4>Projects</h4>
 
-  <p>Research Portfolio in <a href={{"/assets/cv/portfolio_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+  <!-- <p>Research Portfolio in <a href={{"/assets/cv/portfolio_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
 
   <ul class="tab-nav">
     <li><div class="button active" data-ref="#projects-selected">Selected</div></li>
@@ -236,7 +243,7 @@ title: Home
 <div class="docs-section" id="resume">
   <h4>Vitæ</h4>
 
-  <p>Full Resume in <a href={{ "/assets/cv/MinhwaLee_Jan2023.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+  <!-- <p>Full Resume in <a href={{ "/assets/cv/MinhwaLee_Jan2023.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
 
   <!-- The Timeline -->
   <ul class="timeline">
