--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@ title: Home
   <p>
   I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my double B.As in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
-
-  <p><b>ATTENTION: I am looking for full-time research positions that covers NLP and/or computational social science, or Human-computer Interaction starting July 2023! </b>
-  </p>
   </p>
 
   <p>
-  My research goal is to develop AI-driven systems that tackle various societal challenges, such as promoting equitable access in healthcare, education, and social welfare. 
-  In my previous work, I utilized data mining and NLP techniques to (1) extract insights on social welfare disparities and (2) predict mental health risks in US neighborhoods from Twitter.
-  I also contributed to research projects in deep learning and NLP, investigating clinical language models' performance in low-resource settings and enhancing vision-language models with GPT-3. 
+  My research goal is to develop <b>AI-driven systems</b> that tackle various <b>societal challenges</b>, such as promoting equitable access in healthcare, education, and social welfare. 
+  In my previous work, I utilized <b>data mining</b> and <b> natural language processing (NLP)</b> to (1) extract insights on social welfare disparities and (2) predict mental health risks in US neighborhoods from Twitter.
+  I also contributed to research projects in <b>deep learning and NLP</b>, investigating clinical language models' performance in low-resource settings and enhancing vision-language models with GPT-3. 
   These previous experiences not only expanded our understanding of health and society but also demonstrated my versatility in different research domains.</p>
   
-  <p> I am eager to broaden my research interests to encompass fields like multimodal NLP and Human-Computer Interaction (HCI). 
+  <p> I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal NLP</b> and <b>Human-Computer Interaction (HCI)</b>. 
     By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p>
   
+  <p><b>ATTENTION: I am looking for full-time research positions starting July 2023! </b>
+  </p>
+
       <!-- In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>.  -->
   <!-- Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches.  -->
   <!-- I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data.  -->
