--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@ title: Home
   <p>
   My research goal is to develop <b>AI-driven systems</b> that tackle various <b>societal challenges</b>, such as promoting equitable access in healthcare, education, and social welfare. 
   In my previous work, I utilized <b>data mining</b> and <b> natural language processing (NLP)</b> to (1) extract insights on social welfare disparities and (2) predict mental health risks in US neighborhoods from Twitter.
-  I also contributed to research projects in <b>deep learning and NLP</b>, investigating clinical language models' performance in low-resource settings and enhancing vision-language models with GPT-3. 
+  I also contributed to research projects in <b>deep learning and NLP</b>, investigating clinical language models' performance in low-resource settings and enhancing vision-language models with Bayesian Inference and GPT-3. 
   These previous experiences not only expanded our understanding of health and society but also demonstrated my versatility in different research domains.</p>
   
-  <p> I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal NLP</b> and <b>Human-Computer Interaction (HCI)</b>. 
+  <p> I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal reasoning</b>, <b>Human-centered AI</b> and <b>Human-Computer Interaction (HCI)</b>. 
     By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p>
   
-  <p><b>ATTENTION: I am looking for full-time research positions starting July 2023! </b>
+  <p><b>ATTENTION: I am looking for full-time research positions in the U.S. starting July 2023 (No Visa Sponsorship Needed)! </b>
   </p>
 
       <!-- In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>.  -->
