--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Home
   <p> I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal reasoning</b>, <b>Human-centered AI</b> and <b>Human-Computer Interaction (HCI)</b>. 
     By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p>
   
-  <p><b>ATTENTION: I am looking for full-time research positions in the U.S. starting July 2023 (No Visa Sponsorship Needed)! </b>
+  <p><b>ATTENTION: I am looking for a full-time research position in the U.S. starting July 2023 (No Visa Sponsorship Needed)! </b>
   </p>
 
       <!-- In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>.  -->
