--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ title: Home
   </p>
 
   <p>
-  My research goal is to develop <b>AI-driven systems</b> that tackle various <b>societal challenges</b>, such as promoting equitable access in healthcare, education, and social welfare. 
+  My research goal is to develop <b>AI-driven systems</b> that tackle various <b>societal challenges</b>, such as promoting equitable access in healthcare, education, social welfare systems, and safer online communities.
   In my previous work, I utilized <b>data mining</b> and <b> natural language processing (NLP)</b> to (1) extract insights on social welfare disparities and (2) predict mental health risks in US neighborhoods from Twitter.
   I also contributed to research projects in <b>deep learning and NLP</b>, investigating clinical language models' performance in low-resource settings and enhancing vision-language models with Bayesian Inference and GPT-3. 
   These previous experiences not only expanded our understanding of health and society but also demonstrated my versatility in different research domains.</p>
   
-  <p> I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal reasoning</b>, <b>Human-centered AI</b> and <b>Human-Computer Interaction (HCI)</b>. 
+  <p> I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal reasoning</b>, <b>causal inference</b>, <b>Human-centered AI</b> and <b>Human-Computer Interaction (HCI)</b>. 
     By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p>
   
   <p><b>ATTENTION: I am looking for a full-time research position in the U.S. starting July 2023 (No Visa Sponsorship Needed)! </b>
