update my current status

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="docs-section" id="about">
   <h4>About</h4>
   <p>
-  I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  Soon, I will be working as a research intern at Minnesota NLP group, advised by Prof. Dongyeop Kang. For my education history, I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my double B.As in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
   </p>
 
@@ -19,8 +19,8 @@ title: Home
   <p>I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal reasoning</b>, <b>causal inference</b>, <b>Human-centered AI</b> and <b>Human-Computer Interaction (HCI)</b>. 
     By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p>
   
-  <p><b>ATTENTION: I am looking for a full-time research position in the U.S. starting July 2023 (No Visa Sponsorship Needed)! </b>
-  </p>
+  <!-- <p><b>ATTENTION: I am looking for a full-time research position in the U.S. starting July 2023 (No Visa Sponsorship Needed)! </b>
+  </p> -->
 
   <!-- In particular, I am interested in mining information from large-scale social media and/or healthcare data by utilizing <b>statistics, machine learning (ML) and natural language processing (NLP)</b>, which ultimately aims to provide a deeper understanding of <b>socio-environmental impacts on human behaviors and health</b>.  -->
   <!-- Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches.  -->
@@ -58,6 +58,10 @@ title: Home
 <div class="docs-section" id="news">
   <h4>Updates</h4>
     <ul>
+      <li>
+        <b style="color:cadetblue">[June. 2023]</b> &nbsp&nbsp
+        Elated to announce that I will be working as a full-time research intern at Minnesota NLP!  
+      </li>
       <li>
         <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
         Submitted a manuscript on socio-geographic disparities in social system to Nature Food. Wish me good luck!  
