--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="docs-section" id="about">
   <h4>About</h4>
   <p>
-  Soon, I will be working as a research intern at Minnesota NLP group, advised by Prof. Dongyeop Kang. For my education history, I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  I will be working as a research intern at Minnesota NLP group, advised by Prof. Dongyeop Kang. For my education history, I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   Previously, I received my double B.As in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
   </p>
 
