--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@ title: Home
 <div class="docs-section" id="about">
   <h4>About</h4>
   <p>
-  I will be working as a research intern at Minnesota NLP group, advised by Prof. Dongyeop Kang. For my education history, I recently graduated from M.S. program in <a href="https://www.cics.umass.edu/">Computer Science</a> at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
-  Previously, I received my double B.As in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>. 
+  I will be working as a research intern at Minnesota NLP group, advised by Prof. Dongyeop Kang. Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   </p>
 
   <p>
+    Broadly, my research interests aim to develop <b>socially-aware natural language processing (NLP)</b> technologies that better understand human behaviors and improve how people interact with AI and language technologies, with a strong focus on promoting <b>diversity and equity</b> in modern NLP technologies.  
+    Still exploring various research areas in NLP, I am but currently interested in Human-centered NLP, with the applications of large language models (LLMs) to computational social science. 
+  </p>
+
+  <!-- <p>
   My research goal is to develop <b>AI-driven systems</b> that tackle various <b>societal challenges</b>, such as promoting equitable access in healthcare, education, social welfare systems, and safer online communities.
   In my previous work, I utilized <b>data mining</b> and <b> natural language processing (NLP)</b> to (1) extract insights on social welfare disparities and (2) predict mental health risks in US neighborhoods from Twitter.
   I also contributed to research projects in <b>deep learning and NLP</b>, investigating clinical language models' performance in low-resource settings and enhancing vision-language models with Bayesian Inference and GPT-3. 
-  These previous experiences not only expanded our understanding of health and society but also demonstrated my versatility in different research domains.</p>
+  These previous experiences not only expanded our understanding of health and society but also demonstrated my versatility in different research domains.
+  </p> -->
   
-  <p>I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal reasoning</b>, <b>causal inference</b>, <b>Human-centered AI</b> and <b>Human-Computer Interaction (HCI)</b>. 
-    By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p>
+  <!-- <p>I am eager to <b>broaden</b> my research interests to encompass fields like <b>multimodal reasoning</b>, <b>causal inference</b>, <b>Human-centered AI</b> and <b>Human-Computer Interaction (HCI)</b>. 
+    By venturing into these areas, I aim to contribute towards making our societies more conducive to human well-being through advancements in AI.</p> -->
   
   <!-- <p><b>ATTENTION: I am looking for a full-time research position in the U.S. starting July 2023 (No Visa Sponsorship Needed)! </b>
   </p> -->
