--- a/index.html
+++ b/index.html
@@ -6,13 +6,33 @@ title: Home
 <div class="docs-section" id="about">
   <h4>About</h4>
   <p>
-  I will be working as a research intern at Minnesota NLP group, advised by Prof. Dongyeop Kang. Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  I am currently a visiting researcher in Minnesota NLP group at University of Minnesota Twin Cities, advised by <a href="https://dykang.github.io/">Prof. Dongyeop Kang</a>. Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   </p>
 
   <p>
-    Broadly, my research interests aim to develop <b>socially-aware natural language processing (NLP)</b> technologies that better understand human behaviors and improve how people interact with AI and language technologies, with a strong focus on promoting <b>diversity and equity</b> in modern NLP technologies.  
-    Still exploring various research areas in NLP, I am but currently interested in Human-centered NLP, with the applications of large language models (LLMs) to computational social science. 
+  Broadly, my research interests lie in the intersection of <b style="color:blueviolet">natural language processing (NLP)</b>, <b style="color:blue">human-AI interaction (HCI)</b>, and education. 
+  In particular, I aim to support people from underrepresented groups with <b>human-AI collaborative writing systems</b> powered by trustworthy large language models (LLMs) and more user-friendly and accessible design frameworks. 
+  Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better understand human behaviors and promote <b>diversity and equity</b> in modern NLP technologies.  
+  
+  Before joining UMN, I used to conduct research on minining information from large-scale social media texts and Census datasets about public health (food insecurity, depression) using data mining and NLP approaches. 
   </p>
+
+  <!-- <p>Here are some keywords: </p>
+  <ul>
+    <li>
+      Human-AI
+    </li>
+    <li>
+      NLP for Public Health (e.g., developing large language models (LLMs) for pubilc health surveillance)
+    </li>
+    <li>
+      NLP for Social Media Analysis (e.g., processing noisy texts on social media platforms)
+    </li>
+    <li>
+      Equitable AI for Health (e.g., debiasing NLP models, clinical notes, or social media)
+    </li>
+  </ul>
+  </p>  -->
 
   <!-- <p>
   My research goal is to develop <b>AI-driven systems</b> that tackle various <b>societal challenges</b>, such as promoting equitable access in healthcare, education, social welfare systems, and safer online communities.
@@ -31,22 +51,6 @@ title: Home
   <!-- Previously, I have extracted meaningful insights about public health from different sources of unstructured data (e.g., CDC behavioral risk survey, clinical notes, social media posts, geospatial data) using data mining and NLP approaches.  -->
   <!-- I am also interested in widening my research interests to causal inference on human behaviors and social structures through online data.  -->
   
-  <!-- <p>Current Research interests, including but not limited to: </p>
-  <ul>
-    <li>
-      Data Science for Public Health (e.g., data-driven approaches to health disparity issues)
-    </li>
-    <li>
-      NLP for Public Health (e.g., developing large language models (LLMs) for pubilc health surveillance)
-    </li>
-    <li>
-      NLP for Social Media Analysis (e.g., processing noisy texts on social media platforms)
-    </li>
-    <li>
-      Equitable AI for Health (e.g., debiasing NLP models, clinical notes, or social media)
-    </li>
-  </ul>
-  </p>  -->
 </div>
 
 <!-- <div class="docs-section" id="prospective-students">  
@@ -65,7 +69,7 @@ title: Home
     <ul>
       <li>
         <b style="color:cadetblue">[June. 2023]</b> &nbsp&nbsp
-        Elated to announce that I will be working as a full-time research intern at Minnesota NLP!  
+        Elated to announce that I will be working as a full-time visiting researcher at Minnesota NLP!  
       </li>
       <li>
         <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
@@ -172,17 +176,17 @@ title: Home
 </div>
 
 <!-- ========== PROJECTS ==========  -->
-<div class="docs-section" id="projects">
-  <h4>Projects</h4>
+<!-- <div class="docs-section" id="projects">
+  <h4>Projects</h4> -->
 
   <!-- <p>Research Portfolio in <a href={{"/assets/cv/portfolio_website.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
 
-  <ul class="tab-nav">
+  <!-- <ul class="tab-nav">
     <li><div class="button active" data-ref="#projects-selected">Selected</div></li>
     <li><div class="button" data-ref="#projects-all">All</div></li>
-  </ul>
+  </ul> -->
 
-  <div class="tab-content">
+  <!-- <div class="tab-content">
     <div class="tab-pane active" id="projects-selected">
       {% assign selected_projects = site.data.projects.projects | where: "selected", "y" %}
       {% for project in selected_projects %}
@@ -245,7 +249,7 @@ title: Home
     </div>
   </div>
 
-</div>
+</div> -->
 
 
 <!-- ========== RESUME ========== -->
