update about info

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ title: Home
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="about">
   <h4>About Me</h4>
-  <p>
+  <p style="text-align: justify;">
   I am currently a visiting researcher in Minnesota NLP group at University of Minnesota Twin Cities (UMN), advised by <a href="https://dykang.github.io/">Prof. Dongyeop Kang</a>. Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   </p>
 
-  <p>
+  <p style="text-align: justify;">
   Broadly, my research interests lie in the intersection of <b style="color:blueviolet">natural language processing (NLP)</b>, <b style="color:blue">human-AI interaction (HCI)</b>, and <b style="color:chocolate">education</b>. 
   In particular, I aim to support people from underrepresented groups with <b>human-AI collaborative writing systems</b> powered by <b style="color:blueviolet">trustworthy large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
   Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better understand human behaviors and promote <b>diversity and equity</b> in modern NLP technologies.  
