--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ title: Home
   </p>
 
   <p style="text-align: justify;">
-  Broadly, my research interests lie in the intersection of <b style="color:blueviolet">natural language processing (NLP)</b>, <b style="color:blue">human-AI interaction (HCI)</b>, and <b style="color:chocolate">education</b>. 
-  In particular, I aim to support people from underrepresented groups with <b>human-AI collaborative writing systems</b> powered by <b style="color:blueviolet">trustworthy large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
+  Broadly, my research interests lie in the intersection of <b style="color:blueviolet">natural language processing (NLP)</b>, <b style="color:blue">human-AI interaction</b>, and <b style="color:chocolate">education</b>. 
+  In particular, I aim to develop <b>human-AI collaborative writing systems</b> powered by <b style="color:blueviolet">human-aligned large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
   Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better understand human behaviors and promote <b>diversity and equity</b> in modern NLP technologies.  
   
   Before joining UMN, I used to conduct research on minining information from large-scale social media texts and Census datasets about public health (food insecurity, depression) using data mining and NLP approaches. 
@@ -75,14 +75,14 @@ title: Home
         <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
         Submitted a manuscript on socio-geographic disparities in social system to Nature Food. Wish me good luck!  
       </li>
-      <li>
+      <!-- <li>
         <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
         Our work on Visual Word Disambiguation Task has been accepted to ACL 2023 (Main)! 
-      </li>
-      <li>
+      </li> -->
+      <!-- <li>
         <b style="color:cadetblue">[Feb. 2023]</b>&nbsp&nbsp
         Succesfully finished my Data Scientist Internship at Microsoft! 
-      </li>    
+      </li>     -->
     </ul>
 </div>
 
