--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ title: Home
   Before joining UMN, I used to conduct research on minining information from large-scale social media texts and Census datasets about public health (food insecurity, depression) using data mining and NLP approaches. 
   </p>
 
+  <p> <b style="color: red;">Note</b>: I am looking for PhD opportunities starting Fall 2024!</p>
+
   <!-- <p>Here are some keywords: </p>
   <ul>
     <li>
