--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
   Before joining UMN, I used to conduct research on minining information from large-scale social media texts and Census datasets about public health (food insecurity, depression) using data mining and NLP approaches. 
   </p>
 
-  <p> <b style="color: red;">Note</b>: I am looking for PhD opportunities starting Fall 2024!</p>
+  <p> <b style="color: red;">Note</b>: <b>I am looking for PhD opportunities starting Fall 2024!</b></p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
