--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="about">
-  <h4>About Me</h4>
+  <h4>Hello!</h4>
   <p style="text-align: justify;">
   I am currently a visiting researcher in Minnesota NLP group at University of Minnesota Twin Cities (UMN), advised by <a href="https://dykang.github.io/">Prof. Dongyeop Kang</a>. Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   </p>
