update updates & pubs

--- a/index.html
+++ b/index.html
@@ -68,7 +68,22 @@ title: Home
 <!-- ========== News ========== -->
 <div class="docs-section" id="news">
   <h4>Updates</h4>
-    <ul>    
+    <ul>
+      <li>
+        <b style="color:cadetblue">[Jan. 2024]</b> &nbsp&nbsp
+        A new <a href="https://arxiv.org/pdf/2401.14698.pdf">preprint</a> is out! My <b>first 1st-authored paper</b> in NLP domain! 
+        Check out how various types of LLM-generated data still lacks "humanness" through several stress testing! 
+      </li>    
+      <li>
+        <b style="color:cadetblue">[Nov. 2023]</b> &nbsp&nbsp
+        A new <a href="https://arxiv.org/pdf/2311.09799.pdf">preprint</a> is out! 
+        Check out how much our novel method of criteria-based prompting can promote diversity and inclusion in LLMs! 
+      </li>      
+      <li>
+        <b style="color:cadetblue">[Sep. 2023]</b> &nbsp&nbsp
+        A new <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about LLM evaluation is out! 
+        Check out how much LLM evaluation are affected by cognitive biases and compare it with human alignment as well! 
+      </li>      
       <li>
         <b style="color:cadetblue">[June. 2023]</b> &nbsp&nbsp
         Elated to announce that I will be working as a full-time visiting researcher at Minnesota NLP!  
