--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ title: Home
   <h4>Updates</h4>
     <ul>
       <li>
+        <b style="color:cadetblue">[Feb. 2024]</b> &nbsp&nbsp
+        Excited to announce that our work "LocalTweet to LocalHealth: A Mental Health Surveillance Framework Based on Twitter Data" is accepted to <b>LREC-COLING 2024</b>!
+      </li>    
+      <li>
         <b style="color:cadetblue">[Jan. 2024]</b> &nbsp&nbsp
         A new <a href="https://arxiv.org/pdf/2401.14698.pdf">preprint</a> is out! My <b>first 1st-authored paper</b> in NLP domain! 
         Check out how various types of LLM-generated data still lacks "humanness" through several stress testing! 
