--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ title: Home
 <!-- ========== News ========== -->
 <div class="docs-section" id="news">
   <h4>Updates</h4>
+  <div style="height:120px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
       <li>
         <b style="color:cadetblue">[Feb. 2024]</b> &nbsp&nbsp
@@ -92,19 +93,8 @@ title: Home
         <b style="color:cadetblue">[June. 2023]</b> &nbsp&nbsp
         Elated to announce that I will be working as a full-time visiting researcher at Minnesota NLP!  
       </li>
-      <!-- <li>
-        <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
-        Submitted a manuscript on socio-geographic disparities in social system to Nature Food. Wish me good luck!  
-      </li> -->
-      <!-- <li>
-        <b style="color:cadetblue">[May. 2023]</b> &nbsp&nbsp
-        Our work on Visual Word Disambiguation Task has been accepted to ACL 2023 (Main)! 
-      </li> -->
-      <!-- <li>
-        <b style="color:cadetblue">[Feb. 2023]</b>&nbsp&nbsp
-        Succesfully finished my Data Scientist Internship at Microsoft! 
-      </li>     -->
     </ul>
+  </div>
 </div>
 
 <!-- ========== PUBLICATIONS ========== -->
