--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@ title: Home
   <div style="height:200px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
       <li>
+        <b style="color:cadetblue">[Mar. 2024]</b> &nbsp&nbsp
+        Elated to announce that our work "Human-AI Collaborative Taxonomy Construction: A Case Study of Profession-specific Writing Assistants" is accepted to <b>In2Writing Workshop @ CHI 2024</b>!
+      </li>
+      <li>
         <b style="color:cadetblue">[Feb. 2024]</b> &nbsp&nbsp
         Excited to announce that our work "LocalTweet to LocalHealth: A Mental Health Surveillance Framework Based on Twitter Data" is accepted to <b>LREC-COLING 2024</b>!
       </li>    
