--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title: Home
     <ul>
       <li>
         <b style="color:cadetblue">[Mar. 2024]</b> &nbsp&nbsp
-        Elated to announce that our work "Human-AI Collaborative Taxonomy Construction: A Case Study of Profession-specific Writing Assistants" is accepted to <b>In2Writing Workshop @ CHI 2024</b>!
+        Elated to announce that my first NLP+HCI paper "Human-AI Collaborative Taxonomy Construction: A Case Study of Profession-specific Writing Assistants" is accepted to <b>In2Writing Workshop @ CHI 2024</b>!
       </li>
       <li>
         <b style="color:cadetblue">[Feb. 2024]</b> &nbsp&nbsp
