--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@ title: Home
 <!-- ========== News ========== -->
 <div class="docs-section" id="news">
   <h4>Updates</h4>
-  <div style="height:200px; width:auto; border:1px solid #ccc; overflow:auto;">
+  <div style="height:300px; width:auto; border:1px solid #ccc; overflow:auto;">
     <ul>
+      <li>
+        <b style="color:cadetblue">[May. 2024]</b> &nbsp&nbsp
+        Our <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about the LLM alignment with human biases are accepted to Findings of ACL 2024!
+      </li>  
       <li>
         <b style="color:cadetblue">[Mar. 2024]</b> &nbsp&nbsp
         Elated to announce that my first NLP+HCI paper "Human-AI Collaborative Taxonomy Construction: A Case Study of Profession-specific Writing Assistants" is accepted to <b>In2Writing Workshop @ CHI 2024</b>!
