--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@ title: Home
 <div class="docs-section" id="about">
   <h4>Hello!</h4>
   <p style="text-align: justify;">
-  I am currently a visiting researcher in Minnesota NLP group at University of Minnesota Twin Cities (UMN), advised by <a href="https://dykang.github.io/">Prof. Dongyeop Kang</a>. Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
+  I am currently a visiting researcher in Minnesota NLP group at University of Minnesota Twin Cities (UMN), advised by <a href="https://dykang.github.io/">Prof. Dongyeop Kang</a>. 
+  Previously, I obtained my Bachelor's degrees in Computer Science and Mathematics from <a href="https://wooster.edu/">The College of Wooster</a>, and Master's degree in Computer Science at <a href="https://www.umass.edu/">University of Massachusetts Amherst</a>. 
   </p>
 
   <p style="text-align: justify;">
   Broadly, my research interests lie in the intersection of <b style="color:blueviolet">natural language processing (NLP)</b>, <b style="color:blue">human-AI interaction</b>, and <b style="color:chocolate">education</b>. 
-  In particular, I aim to develop <b>human-AI collaborative writing systems</b> powered by <b style="color:blueviolet">human-aligned large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
-  Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better understand human behaviors and promote <b>diversity and equity</b> in modern NLP technologies.  
+  In particular, I aim to develop and evaluate <b>human-AI collaborative systems</b> for educational support (e.g., writing) powered by <b style="color:blueviolet">large language models (LLMs)</b> and <b style="color:blue">interactive design frameworks</b>. 
+  Also, I am interested in developing socially-aware natural language processing (NLP) technologies that better aligns with human behaviors and promote <b>diversity and equity</b> in modern NLP technologies.  
   
-  Before joining UMN, I used to conduct research on minining information from large-scale social media texts and Census datasets about public health (food insecurity, depression) using data mining and NLP approaches. 
+  Before joining UMN, I used to conduct research on addressing health disparity issues from social media texts using data mining and NLP approaches. 
   </p>
 
-  <p> <b style="color: red;">Note</b>: <b>I am looking for full-time research or job opportunities starting Summer 2024!</b></p>
+  <p> <b style="color: red;">Note</b>: <b>I am looking for full-time research or job opportunities starting Summer 2024!</b> Here is my full <a href="https://drive.google.com/file/d/1HuYqGyE4MWmDj-gTUhMFsSgSPJFnNPgr/view?usp=sharing">CV</a>.</p>
 
   <!-- <p>Here are some keywords: </p>
   <ul>
@@ -72,7 +73,7 @@ title: Home
     <ul>
       <li>
         <b style="color:cadetblue">[May. 2024]</b> &nbsp&nbsp
-        Our <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about the LLM alignment with human biases are accepted to Findings of ACL 2024!
+        Our <a href="https://arxiv.org/pdf/2309.17012.pdf">preprint</a> about benchmarking LLM evaluations on cognitive biases are accepted to <b>Findings of ACL 2024</b>!
       </li>  
       <li>
         <b style="color:cadetblue">[Mar. 2024]</b> &nbsp&nbsp
